--- a/frontend_react/src/container/Testimonial/Testimonial.scss
+++ b/frontend_react/src/container/Testimonial/Testimonial.scss
@@ -5,13 +5,16 @@
 }
 
 .app__testimonial-item {
-    width: 60%;
+    background-color: aqua;
+    width: 100%;
     min-height: 320px;
     background-color: var(--white-color);
     display: flex;
+    flex-direction: row;
     padding: 2rem;
     border-radius: 15px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+
     transition: all 0.3s ease-in-out;
 
     img {
@@ -44,29 +47,40 @@
     height: 100%;
     padding: 0 2rem;
     text-align: left;
+
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-}
 
-p {
-    font-size: 1.25rem;
-    line-height: 2rem;
-    color: var(--black-color);
-    font-family: var(--font-base);
-}
+    p {
+        font-size: 1.25rem;
+        line-height: 2rem;
+        color: var(--black-color);
+        font-family: var(--font-base);
 
-h4 {
-    font-weight: 600;
-    color: var(--secondary-color);
-    margin-top: 2rem;
-}
+        @media screen and (min-width: 2000px) {
+            font-size: 2rem;
+            line-height: 3.5rem;
+        }
+    }
 
-h5 {
-    font-weight: 400;
-    color: var(--gray-color);
-    margin-top: 5px;
+    h4 {
+        font-weight: 600;
+        color: var(--secondary-color);
+        margin-top: 2rem;
+    }
+
+    h5 {
+        font-weight: 400;
+        color: var(--gray-color);
+        margin-top: 5px;
+    }
+
+    @media screen and (max-width: 600px) {
+        margin-top: 2rem;
+        padding: 0;
+    }
 }
 
 .app__testimonial-btns {
@@ -78,13 +92,14 @@ h5 {
         height: 50px;
         border-radius: 50%;
         background-color: var(--white-color);
+
         margin: 1rem;
         transition: all 0.3s ease-in-out;
 
         svg {
             width: 20px;
             height: 20px;
-            columns: var(--secondary-color);
+            color: var(--secondary-color);
         }
 
         &:hover {
@@ -94,13 +109,24 @@ h5 {
                 color: var(--white-color);
             }
         }
+
+        @media screen and (min-width: 2000px) {
+            width: 100px;
+            height: 100px;
+
+            svg {
+                width: 45px;
+                height: 45px;
+            }
+        }
     }
 }
 
 .app__testimonial-brands {
-    width: 80%;
+    width: 100%;
     flex-wrap: wrap;
     margin-top: 2rem;
+    flex-direction: row;
 
     div {
         width: 150px;
@@ -131,6 +157,6 @@ h5 {
     }
 
     @media screen and (max-width: 800px) {
-        width: 210px;
+        width: 100%;
     }
 }
