--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -13,6 +13,7 @@
     @media screen and (max-width: 900px) {
         width: 100%;
         flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -49,7 +50,7 @@
         }
 
         &:hover {
-            box-shadow: 0 0 25px #fef4f5;
+            box-shadow: 0 0 20px rgb(223, 223, 223);
         }
 
         @media screen and (min-width: 2000px) {
@@ -88,13 +89,13 @@
 
 .app__skills-exp-works {
     flex: 1;
+    max-width: 200px;
 
     .app__skills-exp-work {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        margin-bottom: 1rem;
         cursor: pointer;
 
         h4 {
