--- a/frontend_react/src/component/Navbar/Navbar.scss
+++ b/frontend_react/src/component/Navbar/Navbar.scss
@@ -14,17 +14,11 @@
 
 .app__navbar-logo {
     display: flex;
-    justify-content: flex-start;
     align-items: center;
+    width: 120px;
 
     img {
-        width: 90px;
-        height: 20px;
-
-        @media screen and (min-width: 2000px) {
-            width: 180px;
-            height: 40px;
-        }
+        width: 100%;
     }
 }
 
